# pcos-ssl-mps

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  byol.yaml  finetune_simclr.yaml  simclr.yaml
docs/: DECISIONS.md  EXPERIMENTS.md  MANUSCRIPT_DRAFT.md  MANUSCRIPT_NOTES.md  NEXT_STEPS.md
metadata/: duplicate_groups.csv  images.csv  near_duplicate_groups_phash.csv  splits_duplicate_aware.csv  splits_near_duplicate_aware_phash.csv
reports/: all_test_results.csv  bootstrap_auc_ci.csv  calibration_improvement.csv  calibration_summary.csv  cross_label_phash_examples.csv  cross_label_phash_groups.csv  downstream_epoch_summary.csv  final_figures_manifest.csv  manuscript_tables.md  multiseed_plan.csv  robustness_convnext_tiny_phash_e1.json  robustness_efficientnet_b0_phash_e1.json  robustness_resnet18_exact_e1.json  robustness_resnet18_phash_e1.json  robustness_severity_convnext_tiny_phash_e1.json  robustness_severity_efficientnet_b0_phash_e1.json  robustness_severity_long.csv  robustness_severity_resnet18_phash_e1.json  robustness_severity_simclr_resnet18_phash_e25_finetune_50pct_e10.json  robustness_severity_summary.csv  robustness_severity_vit_tiny_patch16_224_phash_e1.json  robustness_simclr_resnet18_phash_e1_linear_10pct_e1.json  robustness_simclr_resnet18_phash_e25_finetune_50pct_e1.json  robustness_vit_tiny_patch16_224_phash_e1.json  seed_summary.csv  threshold_confidence_intervals.csv  threshold_summary.csv  thresholds_byol_resnet18_phash_e25_finetune_10pct_e10.json  thresholds_byol_resnet18_phash_e25_finetune_10pct_seed123_e10.json  (+40 more)
(+77 files in other folders)
